# HandGaze

./: .gitignore  CMakeLists.txt  README.md  gestures.onnx  labels.txt  train.py
.cache/clangd/index/: main.cpp.F3FF878A30ED34FA.idx
keras_export/: fingerprint.pb  saved_model.pb
keras_export/variables/: variables.data-00000-of-00001  variables.index
src/: main.cpp
